--- a/encriptador/style.css
+++ b/encriptador/style.css
@@ -14,16 +14,24 @@ body {
     display: flex;
 } */
 
+.content-user {
+  height: 96.5rem;
+  /* background: chocolate; */
+  display: flex;
+  flex-direction: column;
+}
+
 .header-container {
   height: 8rem;
   display: flex;
   align-items: center;
 }
 
-.content-user {
+.section-content {
   height: 80.8rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: col;
+  
   justify-content: space-around;
 }
 
@@ -150,7 +158,7 @@ body {
 .article-a3 {
   background: #f7f7f7;
   margin: 3rem;
-  border-radius: 0.5rem;
+  border-radius: 0.7rem;
   width: 50rem;
   height: 90%;
   display: flex;
