--- a/encriptador/style.css
+++ b/encriptador/style.css
@@ -224,6 +224,7 @@ footer .aboutme {
     /* background: chocolate; */
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
   }
 
   .section-content {
