--- a/encriptador/style.css
+++ b/encriptador/style.css
@@ -297,4 +297,19 @@ footer .aboutme {
     flex-direction: column;
     justify-content: space-around;
   }
+
+  #copiar {
+    background: rgba(216, 223, 232, 1);
+    border: solid rgba(10, 56, 113, 1) 1px;
+    color: rgba(10, 56, 113, 1);
+    /* padding: 15px 32px; */
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 1rem;
+    width: 88%;
+    cursor: pointer;
+  }
+
 }
